Prevent word wraping in SupporterGoals

--- a/src/components/SupporterGoals/SupporterGoals.styl
+++ b/src/components/SupporterGoals/SupporterGoals.styl
@@ -31,5 +31,6 @@
     display: block;
     width: 100%;
     text-align: center;
+    white-space: nowrap;
 }
 
